<resources>
    <string name="app_name">InterstateNow</string>
    <string name="title_activity_profile">Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="admin">Admin</string>
    <string name="welcome_message">Welcome back!</string>
    <string name="email">E-mail</string>
    <string name="emailHint">Type your e-mail</string>
    <string name="password">Password</string>
    <string name="hintPassword">Type your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="account_question">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_acc">Create New Account</string>
    <string name="show_password">Show Password</string>
    <string name="profile">Profile</string>
    <string name="data">Data</string>
    <string name="logout">LOGOUT</string>
    <string name="email_dishub">admin@dishub.com</string>
</resources>